test/conformance/chainsaw/validate/clusterpolicy/standard/psa/test-exclusion-capabilities/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
spec:
  containers:
  - name: nginx1
    image: public.ecr.aws/docker/library/nginx
    args:
    - sleep
    - 1d
    securityContext:
      capabilities:
        add:
        - CHOWN
  initContainers:
  - name: nginx2
    image: public.ecr.aws/docker/library/nginx
    args:
    - sleep
    - 1d
    securityContext:
      capabilities:
        add:
        - FOWNER
