test/conformance/chainsaw/validate/clusterpolicy/standard/psa/test-exclusion-capabilities/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-exclusion-capabilities
spec:
  background: true
  rules:
  - name: test-exclusion-capabilities
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      failureAction: Enforce
      podSecurity:
        level: baseline
        version: latest
        exclude:
        - controlName: "Capabilities"
          images:
          - nginx
          restrictedField: "spec.containers[*].securityContext.capabilities.add"
          values:
          - "foo"
        - controlName: "Capabilities"
          images:
          - nginx
          restrictedField: "spec.initContainers[*].securityContext.capabilities.add"
          values:
          - "baz"
