test/conformance/chainsaw/validate/clusterpolicy/standard/psa/test-exclusion-capabilities/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-exclusion-capabilities
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
