test/conformance/chainsaw/validate/clusterpolicy/standard/psa/test-exclusion-capabilities/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-exclusion-capabilities
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: test-exclusion-capabilities
  - name: step-02
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod.yaml
    - apply:
        file: excluded-pod.yaml
    - apply:
        file: good-pod.yaml
